fixed(bug-visual): bug do wrapped

--- a/style2.css
+++ b/style2.css
@@ -673,7 +673,7 @@ ul li i:hover{
     width: 50%;
     padding: 15px;
     font-family: "Poppins", 'Times New Roman', Times, serif;
-    background-color: #e1acf0;
+    background-color: #81508f;
     border: none;
     border-radius: 15px;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4);
